--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,5 +1,7 @@
 
-
+html {
+    scroll-behavior: smooth;
+}
 /* Starting-media-query */
 @media screen and (max-width: 991px){
     .container{
@@ -10,6 +12,7 @@ header .nav-menu ul li a {
     padding: 5px 13px;
     font-size: 13px;
 }
+
 /* sec-secound */
 /* sec-third */
 /* sec-fourth */
@@ -62,7 +65,7 @@ h2{
 
 .portfolio ul li a{
     font-size: 12px;
-    padding: 35px 5px 35px 5px;
+    padding: 67px 5px 35px 5px;
 }
 
 .portfolio ul li{
@@ -72,7 +75,7 @@ h2{
 
 /* unvisited link */
 .portfolio ul li a:hover {
-    color: green;
+    color: #5CBD9B;
 }
 
 
@@ -109,7 +112,7 @@ h2{
 
 /* sec-fifteen */
 #card-1{
-    height: 475px;
+    height: 494px;
     width: 248px;
     margin: 4px;
     }
@@ -123,6 +126,9 @@ table{
 tr,td{
     margin: 0px 41px 0px 35px;
     /* font-size: 11px; */
+}
+#btn-1{
+    margin: 40px 30px 12px 36px;
 }
 
 
@@ -244,11 +250,11 @@ h2{
 
 /* sec-seven */
 #heading-letsmake{
-    padding: 0 7px 0 43px; 
+    padding: 0px 44px 0 44px;
 }
 
 #line-letsmake{
-    margin: 0 43px 0 43px; 
+    margin: -20px 43px -20px 43px; 
 }
 #para-letsmake{
     margin: 0px 35px 0px 35px;
@@ -258,7 +264,7 @@ h2{
 
 /* sec-eight */
 .portfolio ul li a {
-    padding: 35px 1px 0 1px; 
+    padding: 70px 2px 65px 1px;
     font-size: 10px;
 }
 
@@ -300,7 +306,11 @@ tr,td{
     margin: 0px 22px 0px 22px;
     /* font-size: 11px; */
 }
-
+#btn-1{
+    margin: 32px 30px 25px 30px;
+    width: 125px;
+    height: 21px;
+}
 
 /* sec-fifteen */
 input{
@@ -333,8 +343,19 @@ padding: 04px 14px 0px 14px;
 
 
 @media screen and (max-width: 576px){
+ /* common-css */
+ h1,h2,h3,h4,h6{
+     margin:0;
+     padding:0;
+ }
+    
     .container{
         width: 320px;
+    }
+
+    .ptb-100{
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 /* sec-one */
 header .nav-menu ul li a {
@@ -389,26 +410,59 @@ h2{
 /* sec-six */
 .sec-baner{
     width:100%;
+    display:unset;
 }
 .left-area-banner{
     width: 100%;
+   
 }
 .right-area-banner{
     width: 100%;
- 
+    height:unset;
+    background-color:#f1f1f1;
 }
+
+
+#heading-letsmake{
+    padding: 50px 133px 50px 138px;
+}
+
+#line-letsmake{
+    margin: 0px 138px 0px 138px;
+}
+
+#para-letsmake{
+    width: 300px;
+    margin: auto;
+}
+
 
 /* sec-seven */
 .portfolio ul li a {
     padding: 35px 2px 35px 2px;
 }
+
+
+
 /* sec-eight */
+
+.boxes{
+    background-color: white;
+    min-height: 100px;
+    overflow: unset;
+    margin: 0 123px 0 123px;
+}
 .item-1{
-    border: 3px solid white;
-    height: 138px;
-    width: 138px;
+   border:15px solid white;
+    height: 300px;
+    width: 300px;
+   
+   
+  
 }
 /* sec-nine */
+
+
 /* sec-ten */
 #para-sec{
     width: unset;
@@ -418,7 +472,7 @@ h2{
 /* sec-twelve */
 #li-num{
     font-size: 55px;
-    margin: 0px 35px 0 35px;
+    margin: 20px 35px 7px 35px;
 }
 /* sec-thirteen */
 /* sec-fourteen */
@@ -442,7 +496,7 @@ h2{
 /* sec-fifteen */
 #card-1{
     height:550px;
-    width:300px; 
+    width:300px;
     }
 table{
     font-family:Arial, Helvetica, sans-serif; 
@@ -453,7 +507,11 @@ table{
 tr,td{
     margin: 0px 44px auto;
 }
-
+#btn-1{
+    height: 30px;
+    width: 181px;
+    margin: 40px 59px 39px 59px;
+}
 
 /* sec-sixteen */
 .left-area.getintouch{
@@ -462,41 +520,60 @@ tr,td{
 }
 .right-area.getintouch{
     width: 100%;
-    height: 700px;
+    height: 500px;
+}
+#heading-getintouch{
+    margin: 0 23px 0 23px;
+}
+.login{
+    margin: auto;
+    text-align: center;
+}
+
+#getintouch-hr{
+    margin: 25px 125px 0px 125px;
 }
 input{
-    width: 90%;
+    width: 320px;
 }
 
 textarea{
-    width: 90%;
+    width: 320px;
+}
+
+button{
+    width:150px;
+    display:block;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 
 /* SOME-ISSUE-IN THIS SECTION */
 /* sec-seventeen */
 .sec-footer{
-    height:450px;
+    height:auto;
     width:100%; 
 }
 
+.footer-one{
+   margin:0 0 0 0;
+    display: table-caption;
+}
+
 .footer-one ul li a {
-    font-size: 9px;  
+    font-size: 15px;
+    padding: 8px 89px 8px 89px; 
+}
+.footer-one ul{
+    text-align: justify;
 }
 
 .footer-secound ol li a {
-    font-size: 9px;    
+    font-size: 15px;
+    padding: 26px 5px 25px 5px;  
 }
 /* sec-eighteen */
-.sec-mytheme{
-    background-color: #251E1E ;	
-}
-.mytheam{
-    text-align: center;
-    color:gray ;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    font-family:Arial, Helvetica, sans-serif;
-}
+
 }
 /* END MEDIA-QUERY-575 */
