--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -228,7 +228,7 @@ progress::-webkit-progress-value {
     background: rgb(92, 89, 89);
 }
 #para-expertise{
-    padding: 100px 0 100px 0;
+    padding: 130px 0 10px 0;
 }
 
 /* sec-fifth */
@@ -410,7 +410,7 @@ h2{
 /* sec-six */
 .sec-baner{
     width:100%;
-    display:unset;
+    display: inline-block;
 }
 .left-area-banner{
     width: 100%;
@@ -435,11 +435,16 @@ h2{
     width: 300px;
     margin: auto;
 }
-
+/* .portfolio{
+    height:auto;
+} */
 
 /* sec-seven */
+.portfolio{
+    padding:50px 0 50px 0 ;
+}
 .portfolio ul li a {
-    padding: 35px 2px 35px 2px;
+    padding: 0px 2px 0px 2px;
 }
 
 
@@ -449,7 +454,7 @@ h2{
 .boxes{
     background-color: white;
     min-height: 100px;
-    overflow: unset;
+    overflow: hidden;
     margin: 0 123px 0 123px;
 }
 .item-1{
@@ -461,6 +466,16 @@ h2{
   
 }
 /* sec-nine */
+.sec-viewport{
+    display:hidden;
+}
+
+#btn{
+    width: 225px;
+    font-size: 14px;
+    font-weight: 600;
+    height: 40px;
+}
 
 
 /* sec-ten */
