--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -12,6 +12,12 @@ header .nav-menu ul li a {
     padding: 5px 13px;
     font-size: 13px;
 }
+.nav-menu ul li a:hover {
+    background-color: #5CBD9B;
+    color: white;
+    border-radius: 22px 0px;
+    /* box-shadow: 2px 2px 2px 2px #5CBD9B; */
+}
 
 /* sec-secound */
 /* sec-third */
@@ -207,6 +213,13 @@ header .nav-menu ul li a {
     padding: 5px 8px;
     font-size: 12px;
 }
+.nav-menu ul li a:hover {
+    background-color: #5CBD9B;
+    color: white;
+    border-radius: 22px 0px;
+    /* box-shadow: 2px 2px 2px 2px #5CBD9B; */
+}
+
 /* sec-secound */
 /* sec-third */
 /* sec-four */
@@ -327,6 +340,7 @@ textarea{
     padding: 90px 14px 90px 14px;
     font-size: 12px;
 }
+
 .footer-secound ol li a{
 padding: 04px 14px 0px 14px;
 }
@@ -361,7 +375,16 @@ padding: 04px 14px 0px 14px;
 header .nav-menu ul li a {
     padding: 5px 8px;
     font-size: 11px;
+  
 }
+.nav-menu ul li a:hover {
+    background-color: #5CBD9B;
+    color: white;
+    border-radius: 22px 0px;
+    /* box-shadow: 2px 2px 2px 2px #5CBD9B; */
+    
+}
+
 /* sec-two */
 /* sec-third */
 
@@ -513,6 +536,10 @@ h2{
     height:550px;
     width:300px;
     }
+    #card-1:hover{
+        box-shadow: inset 0px 0px 7px 0px #5CBD9B;
+        border-radius: 8px;
+     }
 table{
     font-family:Arial, Helvetica, sans-serif; 
     font-size: 15px;
@@ -580,6 +607,7 @@ button{
     font-size: 15px;
     padding: 8px 89px 8px 89px; 
 }
+
 .footer-one ul{
     text-align: justify;
 }
