--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,4 @@
 
-
 /****
 common css****/
 body{
@@ -37,7 +36,7 @@ header .nav-menu ul li{
     transition: 0.1s all;
 }
 header .nav-menu ul li a {
-    color: black;
+    color: #727272;
     text-decoration: none;
     display: inline-block;
     padding: 5px 20px;
@@ -46,16 +45,16 @@ header .nav-menu ul li a {
     font-size: 14;
     font-weight: 600;
     transition: 0.5s all;
-    
+   
   
 }
 
 /* unvisited link */
 .nav-menu ul li a:hover {
     background-color: #5CBD9B;
-    border-radius: 23px;
     color: white;
-    box-shadow: 2px 2px 2px 2px #5CBD9B;
+    border-radius: 22px 0px;
+    /* box-shadow: 2px 2px 2px 2px #5CBD9B; */
 }
 
 
@@ -122,8 +121,8 @@ h1{
     line-height: 1.8;
     font-weight: 600px;
     text-align: justify;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     
 }
 
@@ -173,7 +172,7 @@ progress:after{
 
 /* Chrome */
 progress::-webkit-progress-value {
-    background: rgb(92, 89, 89);
+    background: rgb(34, 33, 33);
 }
 
 #para-expertise{
@@ -202,8 +201,9 @@ h2{
     font-size: 15px;
     font-family: sans-serif; 
     color:gray;
-    margin-top: -28px;
+    margin-top: -35px;
     margin-left: 100px;
+    display:flex;
 } 
 
 
@@ -401,6 +401,7 @@ h1{
 
 .sec-para .container{
     text-align: center;
+    padding: 70px 0px;
 }
 #para-sec{
     font-family:Arial, Helvetica, sans-serif;
@@ -412,15 +413,18 @@ h1{
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 135px;
-    padding-bottom: 135px;
+    /* padding-top: 90px;
+    padding-bottom: 50px; */
+}
+#para-sec:hover{
+    color:black;   
 }
 
 #barry-allen{
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     color:gray;
-    padding-top: -100px;
+    /* padding-top: -50px; */
     width:100%;
     
     
@@ -445,8 +449,12 @@ h1{
     float:left;
     text-decoration: none;
     text-align:center;
-    padding: 50px 0 50px;
-    
+    padding: 50px 0 50px;   
+}
+#ul-num:hover{
+    color:#5CBD9B;
+    box-shadow:unset 5px 5px 5px 5px #5CBD9B;
+    font-weight: 600px;
 }
 
 #ul-num{
@@ -465,6 +473,9 @@ h1{
     font-size:10px;
     font-family:Arial, Helvetica, sans-serif;
     color:#0e5beb;
+}
+#web:hover{
+    color:black;
 }
 
 /*******section-clouser****/
@@ -520,7 +531,7 @@ h1{
      font-family:Arial, Helvetica, sans-serif; 
     color: gray;
     font-size: 15px;
-    padding: 10px 135px 10px 135px;;
+    padding: 10px 135px 0px 135px;;
     display:block;
     
 }
@@ -570,12 +581,11 @@ h1{
     border-radius: 1px;
     background-color: white;
     margin: 33px;
-    box-shadow: 5px 10px 8px 10px #f1f1f1;
+    /* box-shadow: 5px 10px 8px 10px #f1f1f1; */
     /* background-color: #5CBD9B; */   
 }
 #card-1:hover{
-   
-   box-shadow: 2px 3px 2px 3px #5CBD9B;
+    box-shadow: inset 0px 0px 7px 0px #5CBD9B;
    border-radius: 8px;
 }
 
@@ -637,7 +647,8 @@ tr,td{
     color:white;
     font-size: 13px;
     font-weight: 600;
-    box-shadow: 5px 3px 5px 3px #dfd7d7;
+    /* box-shadow: 5px 3px 5px 3px #dfd7d7; */
+    box-shadow: unset 7px 0px 7px 0px #5CBD9B;
 }
 
 #btn-1:hover{
@@ -696,22 +707,25 @@ tr,td{
     padding: 50px 0 50px 0;
 }
 
-
+/* 
 .placeholder{
-    color:#E6E3E3;
+    color:black;
     
-}
+} */
 
 
 input{
     width: 100%;
-    padding: 15px 20px;
+    padding: 15px 20px ;
     margin: 8px 0;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid black;
-    color:#E6E3E3;
 }
+/* input:hover{
+    color:red; 
+  border:2px solid white; 
+} */
 
 textarea{
     width: 100%;
@@ -794,13 +808,20 @@ button:hover{
     font-size: 18px;
     font-weight: 600;
     color:gray;
+    opacity: 0.2;
     
 }
 
 /* unvisited link */
 .footer-one ul li a:hover {
-    color: #5CBD9B;
+    color: white;
+    opacity: 0.8;
+    background-color: #5CBD9B;
+    padding: 12px 12px 12px 12px;
+    border-radius: 22px 0px;
+   
 }
+
 
 .footer-secound ol{
     list-style-type: center;
